# vitrea

./: CITATION.cff  Categories.hs  CategoriesInstances.hs  Combinators.hs  LICENSE  Main.hs  Optics.hs  README.md  Tambara.hs  default.nix  readme.org  vitrea.cabal
source/: Categories.hs  CategoriesInstances.hs  Combinators.hs  Main.hs  Optics.hs  Tambara.hs
