cabal-version:       2.4

name:                vitrea
version:             0.1.0.0
synopsis:            Profunctor optics via the profunctor representation theorem.
description:         Pure profunctor lenses and optics via the profunctor representation theorem. All the optics on this library are particular cases of a single unified definition. All the combinators on this library are instantiations of the profunctor optic to a particular Tambara module.
homepage:            https://github.com/mroman42/vitrea
bug-reports:         https://github.com/mroman42/vitrea/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Mario Roman
maintainer:          mromang08@gmail.com
category:            Lenses
extra-source-files:  readme.org

source-repository head
  type:     git
  location: https://github.com/mroman42/vitrea


library
  exposed-modules:     Main
                     , Categories
                     , CategoriesInstances
                     , Tambara
                     , Optics
                     , Combinators
  -- other-modules:
  other-extensions:    AllowAmbiguousTypes
                     , ConstraintKinds
                     , DataKinds
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , ImplicitParams
                     , IncoherentInstances
                     , KindSignatures
                     , LiberalTypeSynonyms
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , TypeSynonymInstances
                     , UndecidableInstances

  build-depends:       base ^>=4.12.0.0
                     , mtl ^>=2.2.2
                     , profunctors
  hs-source-dirs:    source
  default-language:    Haskell2010
